@@ -1,5 +1,6 @@
 Version 2.02.101 - 
 ===================================
+  Refresh existing VG before autoactivation (event retrigger/device reappeared).
   Use pvscan -b in udev rules to avoid a deadlock on udev process count limit.
   Add pvscan -b/--background for the command to be processed in the background.
   Don't assume stdin file descriptor is readable.
